@@ -1,5 +1,5 @@
 const TITLE = "Cyclone Simulator";
-const VERSION_NUMBER = "20190225a";
+const VERSION_NUMBER = "20190228a";
 
 const SAVE_FORMAT = 0;  // Format "0" is probably to be a test and ultimately incompatible
 const EARLIEST_COMPATIBLE_FORMAT = 0;
@@ -78,6 +78,7 @@ const SAVING_RADIX = 36;
 const AUTOSAVE_TICK_PERIOD = 240;
 const ENVDATA_SAVE_FLOAT = -2;
 const ENVDATA_SAVE_MULT = 10000;
+const ACTIVESYSTEM_SAVE_FLOAT = -2;
 const STORMDATA_POS_MULT = 5;
 
 const OFF_SEASON_POLAR_TEMP = -3;
